Updated index to add a transaction-list-container

--- a/fraud_detection_v1/frontend/index.html
+++ b/fraud_detection_v1/frontend/index.html
@@ -26,6 +26,14 @@
             <h2>Analysis Result</h2>
             <p>Submit a transaction to see the result.</p>
         </div>
+
+        <!-- NEW SECTION TO DISPLAY TRANSACTION HISTORY -->
+        <div id="transaction-list-container">
+            <h2>Transaction History</h2>
+            <div id="transaction-list">
+                <p>Loading transaction history...</p>
+            </div>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
